add tip translation key

--- a/app/views/layouts/gooey.html.erb
+++ b/app/views/layouts/gooey.html.erb
@@ -130,7 +130,7 @@
       <% if (has_content?(:help_section)) %>
         <ul>
           <li>
-            <a class="top-help-tip icon icon-help" href='' onclick="help_popup(); return false;">Tip</a>
+            <a class="top-help-tip icon icon-help" href='' onclick="help_popup(); return false;"><%= l(:label_Tip) %></a>
           </li>
         </ul>
       <% end %>
