--- a/app/views/projects/_member_box.html.erb
+++ b/app/views/projects/_member_box.html.erb
@@ -9,7 +9,10 @@ if @users_by_role.any?
       <% @users_by_role.keys.sort.each do |role| %>
       <% next if role.level != Role::LEVEL_ENTERPRISE %>
       <tr>
-        <th><%=h role %><%= help_bubble("text_role_invitation_description_#{role.name.gsub(/ /,'_')}") %></th>
+        <th>
+          <%= role %>
+          <%= help_bubble("text_role_invitation_description_#{role.name.gsub(/ /,'_')}") %>
+        </th>
         <td><%= make_expandable(@users_by_role[role].sort.collect{|u| link_to_user u}.join(", "), 250) %></td>
       </tr>
       <% end %>
