--- a/app/views/activity_streams/_activity_stream_list.html.erb
+++ b/app/views/activity_streams/_activity_stream_list.html.erb
@@ -1,5 +1,5 @@
    <% activities_by_item = ActivityStream.fetch(user_id,project_id, with_subprojects, limit, max_created_at) %>
-    <%link = link_to_remote "refresh", {
+    <% link = link_to_remote l('general.refresh'), {
                                 :url => {:controller => :activity_streams,
                                         :action => :index,
                                         :user_id => user_id,
