--- a/app/views/layouts/_account_menu.html.erb
+++ b/app/views/layouts/_account_menu.html.erb
@@ -2,9 +2,9 @@
 <%= render :partial => "notifications/unresponded" %>
   <%= link_to_user(User.current, :format => :username) %>
   <span class="gt-util-separator">|</span>
-  <%= link_to "account", {:controller => :my, :action => :account} %>
+  <%= link_to l('label_my_account'), {:controller => :my, :action => :account} %>
   <span class="gt-util-separator">|</span>
-  <%= link_to "sign out", :signout %>
+  <%= link_to l('label_logout'), :signout %>
 <% else %>
   <%= link_to "home", :home %>
   <span class="gt-util-separator">|</span>
@@ -13,4 +13,4 @@
   <%= link_to "sign up", {:controller => :account, :action => :register} %>
 <% end %>
 <span class="gt-util-separator">|</span>
-<a href="http://help.bettermeans.com" target="blank">help</a>
+<a href="http://help.bettermeans.com" target="blank"><%= l(:label_help) %></a>
