adding more translation keys

--- a/app/views/activity_streams/_activity_comment.html.erb
+++ b/app/views/activity_streams/_activity_comment.html.erb
@@ -9,6 +9,6 @@
 </tr>
 <tr id="add_comment_trigger_<%= as.object_id %>">
   <td colspan=3>
-    <input type="text" value="Add a comment..." class="activity-comment" onfocus="prepare_input(<%= as.object_id %>);"></input>
+    <input type="text" value='<%= l('general.add_a_comment') %>' class="activity-comment" onfocus="prepare_input(<%= as.object_id %>);"></input>
   </td>
 </tr>
