--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -82,5 +82,5 @@
       </ul>
     </div>
   </div>
-  <a href="#" id="toTop" name="toTop">^ Scroll to Top</a>
+  <a href="#" id="toTop" name="toTop"><%= l('general.go_to_top') %></a>
 </div>
