--- a/app/views/activity_streams/_activity_stream_list.html.erb
+++ b/app/views/activity_streams/_activity_stream_list.html.erb
@@ -1,16 +1,16 @@
-   <% activities_by_item = ActivityStream.fetch(user_id,project_id, with_subprojects, limit, max_created_at) %>
-    <% link = link_to_remote l('general.refresh'), {
-                                :url => {:controller => :activity_streams,
-                                        :action => :index,
-                                        :user_id => user_id,
-                                        :project_id => project_id,
-                                        :with_subprojects => with_subprojects,
-                                        :limit => limit,
-                                        :max_created_at => nil,
-                                        :refresh => true
-                                        },
-                                :method => :get, :class => "right"
-                                } unless (defined? show_refresh) && !show_refresh %>
+<% activities_by_item = ActivityStream.fetch(user_id,project_id, with_subprojects, limit, max_created_at) %>
+<% link = link_to_remote l('general.refresh'), {
+                            :url => {:controller => :activity_streams,
+                                    :action => :index,
+                                    :user_id => user_id,
+                                    :project_id => project_id,
+                                    :with_subprojects => with_subprojects,
+                                    :limit => limit,
+                                    :max_created_at => nil,
+                                    :refresh => true
+                                    },
+                            :method => :get, :class => "right"
+                            } unless (defined? show_refresh) && !show_refresh %>
 <span id="activity_stream_list">
  <table border="0" class="gt-table gt-user-table gt-activity-table">
     <tbody>
@@ -21,7 +21,7 @@
   </table>
   <% unless activities_by_item.empty? %>
   <div id="activity_stream_bottom" class="activity-bottom">
-    <%= link_to_remote "Show more ...", {
+    <%= link_to_remote l('general.show_more'), {
                                 :url => {:controller => :activity_streams,
                                         :action => :index,
                                         :user_id => user_id,
